spacing corrected in aboutme and portfolio

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -19,17 +19,16 @@
 
 .white-text {
   color: var(--white);
-
 }
 
-.space {
+/* .space {
   margin-top: -20em;
 }
 
 .space2 {
-  margin-top: 15em;
+  margin-top: 10em;
 
-}
+} */
 
 /* .logo {
   height: 6em;
