--- a/react-portfolio/src/components/aboutme/aboutme.css
+++ b/react-portfolio/src/components/aboutme/aboutme.css
@@ -11,17 +11,17 @@
 }
 
 .about-me {
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+    /* margin-top: 1em;
+    margin-bottom: 1em; */
+    padding-top: 10em;
+    padding-bottom: 10em;
     position: relative;
     /* min-height: 1vh; */
 }
 
-.lessons {
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
-    padding-top: 1.25em;
-    position: relative;
+
+
+.full-width-container {
     max-width: 100%;
 }
 
@@ -50,18 +50,27 @@ ul li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    max-width: 100%;
     overflow: hidden;
     line-height: 0;
+
 }
 
 .custom-shape-divider-top-1711394646 svg {
     position: relative;
     display: block;
-    width: calc(100% + 1.3px);
+    max-width: 100%;
+    /* width: calc(100% + 1.3px); */
     height: 150vh;
+
 }
 
-.custom-shape-divider-top-1711394646 .shape-fill {
+.custom-shape-divider-top-1711394646 .shape-fill-white {
     fill: #FFFFFF;
+}
+
+svg {
+    width: 100%;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
